# lab3_finals

./: CMakeLists.txt  README.md  lab ass 3.txt
prog1/: CMakeLists.txt  coins.cpp
prog2/: CMakeLists.txt  main.cpp
prog3/: CMakeLists.txt  main.cpp
